# tasker_module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  communicate.cpp  controller.cpp  main.cpp  manager.cpp  managerservers.cpp  tasker_manager.cpp  tasker_node.cpp  telegram.cpp  url.cpp
include/: communicate.h  controller.h  curl_wrapper.h  event.h  manager.h  managerservers.h  tasker_manager.h  tasker_node.h  telegram.h  url.h
