cmake_minimum_required(VERSION 3.10)
project(tasker_node)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories("include")
include_directories("server_logic/connector_manager/include")
include_directories("server_logic/include")
link_directories(lib)
add_subdirectory(server_logic)
add_executable(${PROJECT_NAME} main.cpp  tasker_node.cpp )
#add_library(${PROJECT_NAME} SHARED src/server.cpp src/json.c src/exeception.cpp)
#libtdclient.a libtdcore.a libtdapi.a libtdactor.a libtdnet.a libtdutils.a libtddb.a libtdsqlite.a
target_link_libraries(${PROJECT_NAME} -lm -pthread Crow ${CURL_LIBRARIES} server_logic)
#target_link_libraries(${PROJECT_NAME} ${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY} ${CMAKE_DL_LIBS} ${ZLIB_LIBRARIES}  nlohmann_json::nlohmann_json)